[gd_scene load_steps=12 format=3 uid="uid://b268riqbx111w"]

[ext_resource type="Texture2D" uid="uid://xm3t37crrmte" path="res://Assets/Revise.svg" id="1_63r6j"]
[ext_resource type="Script" path="res://Scenes/Scripts/translate.gd" id="1_v83pl"]
[ext_resource type="Texture2D" uid="uid://r31lt02cjght" path="res://Assets/wrong.svg" id="2_hpyd0"]
[ext_resource type="Theme" uid="uid://vdp0ma3noevw" path="res://Themes/HomeBtn.tres" id="2_srvxq"]
[ext_resource type="Theme" uid="uid://d2otcyr4v4nk2" path="res://Themes/ItemListTheme.tres" id="3_ugbfp"]
[ext_resource type="Script" path="res://Scenes/Scripts/add_word_btn_panel.gd" id="3_xdbk8"]
[ext_resource type="Texture2D" uid="uid://clejfwcarfl62" path="res://Assets/check.svg" id="4_oskjr"]
[ext_resource type="Theme" uid="uid://bpg62mkgrlu4" path="res://Themes/MainTheme.tres" id="4_pwknd"]
[ext_resource type="Texture2D" uid="uid://ce6y8an4ut4t4" path="res://Assets/Arrow.svg" id="7_yvj1s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2pns"]
bg_color = Color(0.278431, 0.741176, 0.658824, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p6yuu"]
bg_color = Color(0.278431, 0.741176, 0.658824, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Translate" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -360.0
offset_top = 32.0
offset_right = 360.0
offset_bottom = 1152.0
grow_horizontal = 2
script = ExtResource("1_v83pl")
wrong = ExtResource("2_hpyd0")
check = ExtResource("4_oskjr")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(640, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_right = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="IconSVG" type="TextureRect" parent="VBoxContainer/Control"]
modulate = Color(0.278431, 0.741176, 0.658824, 1)
layout_mode = 1
offset_right = 124.0
offset_bottom = 60.0
texture = ExtResource("1_63r6j")
expand_mode = 2
stretch_mode = 4

[node name="Name" type="RichTextLabel" parent="VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[left][color=47BDA8][font_size=54] Memorizar Traduções"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="DonePanel" type="Panel" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(640, 200)
layout_mode = 2
theme = ExtResource("2_srvxq")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/DonePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Front" type="RichTextLabel" parent="VBoxContainer/DonePanel/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center][font_size={48}][color=Black]Parabéns!
Categiria Concluida"
fit_content = true
scroll_active = false

[node name="SentencePanel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(640, 300)
layout_mode = 2
theme = ExtResource("2_srvxq")

[node name="Sentence" type="RichTextLabel" parent="VBoxContainer/SentencePanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -19.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][font_size={32}][color=Black]CARTA"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="OptionsPanel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(640, 300)
layout_mode = 2
theme = ExtResource("2_srvxq")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/OptionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/OptionsPanel/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[left][font_size={24}][color=black]Selecione a tradução da palavra:"
fit_content = true
scroll_active = false

[node name="ItemList" type="ItemList" parent="VBoxContainer/OptionsPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_ugbfp")
theme_override_constants/v_separation = 16
theme_override_constants/h_separation = 32
theme_override_font_sizes/font_size = 32
auto_height = true
item_count = 4
fixed_icon_size = Vector2i(32, 32)
item_0/text = "a) Apple"
item_0/icon = ExtResource("4_oskjr")
item_1/text = "b) Bee"
item_2/text = "c) Car"
item_3/text = "d) Dog"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="AnswerContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
alignment = 2

[node name="Confirm" type="Panel" parent="VBoxContainer/AnswerContainer"]
custom_minimum_size = Vector2(318, 56)
layout_mode = 2
size_flags_horizontal = 3

[node name="AnswerBtn" type="Button" parent="VBoxContainer/AnswerContainer/Confirm"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -12.0
offset_right = -8.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_pwknd")
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
toggle_mode = true
text = "Mostrar Resposta"
flat = true
expand_icon = true

[node name="ConfirmContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Confirm" type="Panel" parent="VBoxContainer/ConfirmContainer"]
custom_minimum_size = Vector2(318, 56)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u2pns")
script = ExtResource("3_xdbk8")

[node name="ConfirmBtn" type="Button" parent="VBoxContainer/ConfirmContainer/Confirm"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -12.0
offset_right = -8.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_pwknd")
theme_override_font_sizes/font_size = 24
text = "Confirmar"
expand_icon = true

[node name="OptionsContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="Next" type="Panel" parent="VBoxContainer/OptionsContainer"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_p6yuu")
script = ExtResource("3_xdbk8")

[node name="NextBtn" type="Button" parent="VBoxContainer/OptionsContainer/Next"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -12.0
offset_right = -8.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_pwknd")
theme_override_font_sizes/font_size = 24
text = "Próxima palavra"
icon = ExtResource("7_yvj1s")
icon_alignment = 2
expand_icon = true

[node name="DoneContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="TryAgain" type="Panel" parent="VBoxContainer/DoneContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_u2pns")
script = ExtResource("3_xdbk8")

[node name="BeginAgainBtn" type="Button" parent="VBoxContainer/DoneContainer/TryAgain"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -12.0
offset_right = -8.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_pwknd")
theme_override_font_sizes/font_size = 24
text = "Tentar de novo do inicio"
icon_alignment = 2
expand_icon = true

[node name="Done" type="Panel" parent="VBoxContainer/DoneContainer"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_p6yuu")
script = ExtResource("3_xdbk8")

[node name="DoneBtn" type="Button" parent="VBoxContainer/DoneContainer/Done"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -12.0
offset_right = -8.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_pwknd")
theme_override_font_sizes/font_size = 24
text = "Concluir"
icon = ExtResource("7_yvj1s")
icon_alignment = 2
expand_icon = true

[node name="ModeSelectContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="TryAgain" type="Panel" parent="VBoxContainer/ModeSelectContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_u2pns")
script = ExtResource("3_xdbk8")

[node name="ToPt" type="Button" parent="VBoxContainer/ModeSelectContainer/TryAgain"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -12.0
offset_right = -8.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_pwknd")
theme_override_font_sizes/font_size = 24
text = "Traduzir para Português"
icon_alignment = 2
expand_icon = true

[node name="Done" type="Panel" parent="VBoxContainer/ModeSelectContainer"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_p6yuu")
script = ExtResource("3_xdbk8")

[node name="ToEg" type="Button" parent="VBoxContainer/ModeSelectContainer/Done"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -12.0
offset_right = -8.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_pwknd")
theme_override_font_sizes/font_size = 24
text = "Traduzir para Inglês"
icon_alignment = 2
expand_icon = true

[connection signal="pressed" from="VBoxContainer/AnswerContainer/Confirm/AnswerBtn" to="." method="_on_answer_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/ConfirmContainer/Confirm/ConfirmBtn" to="." method="_on_confirm_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsContainer/Next/NextBtn" to="." method="_on_next_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/DoneContainer/TryAgain/BeginAgainBtn" to="." method="_on_begin_again_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/DoneContainer/Done/DoneBtn" to="." method="_on_done_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/ModeSelectContainer/TryAgain/ToPt" to="." method="_on_to_pt_pressed"]
[connection signal="pressed" from="VBoxContainer/ModeSelectContainer/Done/ToEg" to="." method="_on_to_eg_pressed"]
